# template-workflow-document-qa

./: .env  .env.template  .gitignore  README.md  copier.yaml  llama_deploy.yaml  llama_deploy.yaml.jinja  pyproject.toml  pyproject.toml.jinja
.github/workflows/: check-regeneration.yml
copier/: copy_utils.py
src/document_qa/: clients.py  qa_workflows.py
src/{{ project_name_snake }}/: clients.py  config.py.jinja  qa_workflows.py
src/{{project_name_snake}}/: clients.py  qa_workflows.py
test-proj/: .copier-answers.yml  .env.template  .gitignore  README.md  pyproject.toml
test-proj/src/test_proj/: clients.py  config.py  qa_workflows.py
test-proj/ui/: .gitignore  index.html  package.json  vite.config.ts
test-proj/ui/src/: App.tsx
test-proj/ui/src/components/: ChatBot.tsx  Sidebar.tsx
test-proj/ui/src/libs/: chatHistory.ts  clients.ts  config.ts  events.ts  useChatHistory.ts  useChatWorkflowHandler.ts  useChatbot.ts  utils.ts
test-proj/ui/src/pages/: Home.tsx
ui/: package.json  package.json.jinja  vite.config.ts
ui/src/: App.tsx  main.tsx  vite-env.d.ts
ui/src/components/: ChatBot.tsx  Sidebar.tsx
ui/src/libs/: clients.ts  config.ts  config.ts.jinja  events.ts  events.ts.jinja  useChatHistory.ts  useChatbot.ts  utils.ts
ui/src/pages/: Home.tsx
