[project]
name = "test_proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.12"
dependencies = [
    "llama-index-workflows>=2.2.0,<3.0.0",
    "llama-cloud-services>=0.6.68",
    "llama-index-core>=0.14.0",
    "llama-index-llms-openai>=0.5.6",
    "llama-index-embeddings-openai>=0.5.1",
    "python-dotenv>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.llamadeploy]
env-files = [".env"]
llama_cloud = true

[tool.llamadeploy.ui]
directory = "./ui"

[tool.llamadeploy.workflows]
upload = "test_proj.qa_workflows:upload"
chat = "test_proj.qa_workflows:chat"
